--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ jobs:
     - stage: "Tests"                # naming the Tests stage
       name: "Unit Tests"            # names the first Tests stage job
       script: grunt test
+    - stage: "Tests"                # naming the Tests stage
+      name: "Integration Tests"            # names the first Tests stage job
+      script: grunt prod --msg="$COMPILE_MSG"
+      - script: xvfb-run --server-args="-screen 0 1200x800x24" grunt testui
 
 
 # script:
